# mediawiki-matrix-bot

./: README.md  config.json.example  config.signal.json.example  flake.nix  pyproject.toml
mediawiki_matrix_bot/: __init__.py
